README improvements and cleanup

--- a/README
+++ b/README
@@ -1,14 +1,17 @@
 
 
-              portdbc: portdb command line client
+              portdbc: CRUX's portdb command line client
 
 
 DESCRIPTION
-  portdbc is a command line tool which provides an easy way to query the
-  CRUX's portdb without the need of use a web browser for that.
+
+  portdbc is a command line tool which provides an easy way to query the CRUX's
+  portdb (http://crux.nu/portdb) without the need of use a web browser for that.
+  It is written in C and uses libcurl(3) for obtaining the desired information
+  and after that parses them by using libxml(3) to show you the output result.
   One of the advantages of this tool is that it can be combinated with shell
-  functions, I/O operations, command filters, etc. to exactly find what you
-  are looking for.
+  functions, I/O operations, command filters, etc. to exactly find what you are
+  looking for.
 
 
 REQUERIMENTS
@@ -28,14 +31,17 @@ BUILD AND INSTALL
 
 USAGE
 
-  Usage: portdbc <command> <arg>
+  portdbc <command> [arg]
   Where commands are:
-    repos             Overview of available repositories
+    repos             Overview of all available repositories
     dups              List of duplicated ports
-    search <STRING>   Search for ports by name
-    list <REPO>       Ports in repository REPO
-    getup <REPO>      Print httpup/rsync file for REPO
+    search  <expr>    Show port names containing 'expr'
+    list    <repo>    Show ports in repository
+    getup   <repo>    Print httpup/rsync file for a repository
     help              Show this help information
+    version           Show version information
+
+  See the page manual for more information: portdbc(8)
 
 
 EXAMPLES
@@ -46,11 +52,8 @@ EXAMPLES
   To find xfce ports out of the xfce repository:
   # portdbc search xfce | grep -v ' xfce '
 
-  To obtain candidates for appending a port to your mpup's stuff:
-  # portdbc search audacity
-  Then you could append the command line of your prefered one:
-  # portdbc search audacity \
-  | grep ' prologic ' | awk '{print $3,$4,$5,$6}' >> /etc/mpup.lst
+  To list top 10 port duplicates
+  # portdbc dupds | head -10
 
 
 BUGS AND REPORTS
