Update portdbc.8 (https references)

--- a/portdbc.8
+++ b/portdbc.8
@@ -16,7 +16,7 @@ portdbc \- Command line tool client for CRUX's portdb
 
 .SH "DESCRIPTION"
 portdbc is a command line tool which provides an easy way to query the CRUX's
-portdb (http://crux.nu/portdb) without the need of use a web browser for that.
+portdb (https://crux.nu/portdb) without the need of use a web browser for that.
 It is written in C and uses libcurl(3) for obtaining the desired information and
 after that parses them by using libxml(3) to show you the output result.
 One of the advantages of this tool is that it can be combinated with shell
